tests/errors/ErrIds2.yogur
var a: Int
var b: Int

a = b + c